--- a/client/package.json
+++ b/client/package.json
@@ -8,12 +8,13 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.23.0",
     "js-cookie": "^3.0.1",
+    "mdbreact": "^4.6.1",
     "nodemon": "^2.0.14",
     "react": "^17.0.2",
     "react-cookie": "^4.1.1",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^3.4.4",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
